# zhixueUtilities

./: .gitignore  CMakeLists.txt  README.md
src/: analyzeJson.cpp  jsonRewrite.cpp  jsonRewrite.hpp  login.cpp  operateHw.cpp  postData.cpp  prepareSubmission.cpp  reqData.cpp  submission.cpp  updateHw.cpp  zhixueUtilities.cpp  zhixueUtilities.hpp
